--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
     build:
         commands:
             - echo "we will run some tests and build"
-            - grep -i LW index.html
+            - grep -i app index.html
     post_build:
         commands:
             - echo "post build phase"
